--- a/src/styles/AdminStyles/Header.css
+++ b/src/styles/AdminStyles/Header.css
@@ -3,7 +3,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 1rem;
-    background-color: #c0a173;
+    background-color:#eedc82;
     height: 5rem;
   }
   
@@ -25,7 +25,7 @@
   .header h1 {
     font-size: 3rem;
     font-weight: bold;
-    color: #800000;
+    color:#753918;
     margin-left:6.5rem;
   }
   
