--- a/src/styles/AdminStyles/Login.css
+++ b/src/styles/AdminStyles/Login.css
@@ -34,7 +34,7 @@
 .login-button {
   width: 100%;
   height: 40px;
-  background-color: #800000 !important;
+  background-color: #753918 !important;
   color: #ffffff !important;
   font-weight: bold;
   margin-top: 20px;
@@ -43,8 +43,8 @@
 }
 
 .login-button:hover {
-  background-color: #f8ecd2 !important;
-  color: #800000 !important;
+  background-color: #eedc82 !important;
+    color: #753918 !important;
 
 
 }
@@ -62,5 +62,5 @@
 
 .login-form .ant-input:hover,
 .login-form .ant-input-password:hover {
-  border-color: #800000 !important;
+  border-color: #753918 !important;
 }
